AC-28 Optimize dashboard analytics with batch operations and intelligent data loading
- Add batch retrieval methods to reduce N+1 query patterns
- Implement intelligent strategy selection (parallel/sequential) based on data volume
- Optimize analytics calculation from 100+ to ~10 database calls
- Add completion status checking methods for assessment matrices
- Improve test code using modern Java patterns (Stream.of)
- Add comprehensive test coverage for DashboardAnalyticsService

Performance impact: Significant reduction in database calls and improved response times
for dashboard analytics generation

🤖 Generated with Claude Code (Opus 4.1)

Co-Authored-By: Claude <noreply@anthropic.com>